# zapret2-nextgen-blockcheck

./: .gitignore  Cargo.toml  NOTES.md  README.md  codex_prompt.txt
config/: checker.toml
config/standart/: bayesian_priors.yaml  strategies.yaml  transition_matrix.yaml
docs/: async_worker_lifecycle.md  firewall_rules.md  native_probe.md  scheduler_integration.md  source_port_isolation.md
schemas/: probe-result.schema.json
scripts/: build-openwrt-arm64.sh
src/: bayes.rs  config.rs  firewall.rs  graph.rs  isolation.rs  lib.rs  main.rs  nfqws.rs  ordering.rs  payload_registry.rs  probe.rs  pruning.rs  queue.rs  scheduler.rs  scoring.rs  socket_mark.rs  types.rs  worker.rs  worker_pool.rs
tests/: bayes_persistence_tests.rs  config_graph_tests.rs  firewall_render_tests.rs  http_parser_tests.rs  native_probe_tests.rs  queue_tests.rs  root_ignored_tests.rs  scoring_tests.rs
